# volumetric

./: .containerignore  .gitattributes  .gitignore  ABI.md  AETNA_UI_V2_PLAN.md  Cargo.toml  DAMASCENE_UI_V2_PLAN.md  EDGE_REFINEMENT_RESEARCH.md  EDGE_SAMPLING_REPRO.md  ML_SAMPLING_APPROACH.md  NORMAL_PROBING_ARCHITECTURE.md  PHASE4_ARCHIVE.md  README.md  SAMPLE_CLOUD_DEBUG.md  WGSL_SCRIPT_OPERATOR_PLAN.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/brep_core/: Cargo.toml
crates/brep_model_template/: Cargo.toml
crates/fea_core/: Cargo.toml
crates/fea_core/examples/: grazing_rim.rs
crates/fea_core/src/: element.rs  frame.rs  inverse.rs  lib.rs  schwarz.rs
crates/meshing_lab/: Cargo.toml
crates/meshing_lab/src/: adjacency.rs  cleanup.rs  fit.rs  harness.rs  lib.rs  oracle.rs  render.rs  segmentation.rs  snap.rs
crates/operators/fea_inverse_operator/: Cargo.toml
crates/operators/fea_inverse_operator/src/: lib.rs
crates/operators/heightmap_extrude_operator/: Cargo.toml
crates/operators/heightmap_extrude_operator/src/: lib.rs
crates/operators/image_model_operator/: Cargo.toml
crates/operators/image_model_operator/src/: lib.rs
crates/operators/image_model_operator/template/: gridfield_model_template.wasm
crates/operators/lattice_operator/: Cargo.toml
crates/operators/lattice_operator/src/: lib.rs
crates/operators/lattice_operator/template/: lattice_model_template.wasm
crates/operators/lua_script_operator/: Cargo.toml
crates/operators/lua_script_operator/src/: lib.rs
crates/operators/mesh_height_operator/: Cargo.toml
crates/operators/mesh_height_operator/src/: lib.rs
crates/operators/mesh_height_operator/template/: trimesh_height_model_template.wasm
crates/operators/step_import_operator/: Cargo.toml
crates/operators/step_import_operator/src/: convert.rs  entities.rs  lib.rs  p21.rs  style.rs
crates/operators/step_import_operator/template/: brep_model_template.wasm
crates/operators/step_import_operator/tests/: board.rs  cushion.rs  fixture.rs  oracle.rs
crates/operators/step_import_operator/tests/fixtures/: box_cylinder.step  colored_box_cylinder.step
crates/operators/strut_model_operator/: Cargo.toml
crates/operators/strut_model_operator/src/: lib.rs
crates/operators/strut_model_operator/template/: strut_model_template.wasm
crates/operators/strut_pattern_operator/: Cargo.toml
crates/operators/strut_pattern_operator/src/: lib.rs
crates/operators/sweep_operator/: Cargo.toml
crates/operators/sweep_operator/src/: lib.rs
crates/operators/voronoi_skeleton_operator/: Cargo.toml
crates/operators/voronoi_skeleton_operator/src/: lib.rs
crates/operators/wgsl_script_operator/: Cargo.toml
crates/operators/wgsl_script_operator/src/: lib.rs  lower.rs  restrict.rs
crates/operators/wgsl_script_operator/template/: wgsl_model_template.wasm
crates/volumetric_abi/: Cargo.toml
crates/volumetric_abi/src/: annotations.rs  f64_map.rs  fea.rs  lib.rs  lua_parameters.rs  subspace.rs  threading.rs  trimesh.rs  wgsl_parameters.rs
crates/volumetric_cli/: Cargo.toml
crates/volumetric_cli/examples/: compile_timing.rs
crates/volumetric_cli/src/: assets.rs  camera.rs  headless_renderer.rs  info.rs  main.rs  project.rs  raster.rs  render.rs
crates/volumetric_cli/src/shaders/: grid.wgsl  headless_mesh.wgsl
crates/volumetric_daemon/: Cargo.toml  Containerfile  build-push.sh
crates/volumetric_daemon/src/: lib.rs  main.rs
crates/volumetric_daemon/tests/: integration.rs
crates/volumetric_protocol/: Cargo.toml
crates/volumetric_protocol/src/: client.rs  error.rs  lib.rs  web_client.rs
crates/volumetric_renderer/: Cargo.toml  RENDERING_ARCHITECTURE.md
crates/volumetric_renderer/src/: buffer.rs  callback.rs  camera.rs  conversions.rs  lib.rs  scene.rs  test_scenes.rs  types.rs
crates/volumetric_renderer/src/pipelines/: composite.rs  line.rs  mesh.rs  mod.rs  point.rs
crates/volumetric_renderer/src/shaders/: line.wgsl  mesh_gbuffer.wgsl  point.wgsl  ssao.wgsl
crates/volumetric_ui/: Cargo.toml  RENDERING_ARCHITECTURE.md  Trunk.toml  index.html  wasm_helper.js
crates/volumetric_ui/src/: main.rs  marching_cubes_wgpu.rs  point_cloud_wgpu.rs
crates/volumetric_ui/src/platform/: mod.rs  native.rs  web.rs
crates/volumetric_ui/src/renderer/: buffer.rs  callback.rs  camera.rs  conversions.rs  gbuffer.rs  mod.rs  test_scenes.rs  types.rs
crates/volumetric_ui/src/renderer/pipelines/: composite.rs  line.rs  mesh.rs  mesh_xray.rs  mod.rs  point.rs  ssao.rs
crates/volumetric_ui/src/renderer/shaders/: composite.wgsl  line.wgsl  mesh_gbuffer.wgsl  mesh_xray.wgsl
crates/volumetric_ui/src/shaders/: marching_cubes.wgsl  mesh_ssao.wgsl  point_cloud.wgsl
crates/volumetric_ui_v2/: Cargo.toml  Trunk.toml  index.html  wasm_helper.js
crates/volumetric_ui_v2/examples/: headless_preview.rs  headless_sketch_preview.rs  headless_subspace_preview.rs
crates/volumetric_ui_v2/src/: catalog.rs  host.rs  lib.rs  main.rs  remote.rs  session.rs  settings.rs  web_host.rs
examples/: fidget_spinner.lua  fidget_spinner.wgsl  profile_fea_inverse.rs  profile_mesh.rs  raspberry_pi_4_tray.lua  raspberry_pi_4_tray.wgsl
src/: adaptive_surface_nets.rs  adaptive_surface_nets_2.md  adaptive_surface_nets_2.rs  baked.rs  build_cache.rs  direct_preview.rs  lib.rs  main.rs  marching_cubes_cpu.rs  marching_cubes_tables.rs  marching_cubes_tri_table.rs  marching_cubes_wgpu.rs  mc_tri_table.inc  mesh_cache.rs  mesh_decimation.rs  operator_config.rs  parallel_iter.rs  point_cloud_wgpu.rs  sample_cloud.rs  stl.rs
tests/: baked.rs  boolean_operator.rs  brim.rs  build_cache.rs  coil.rs  extrude.rs  f64_map_merge.rs  fea_deform.rs  fea_density.rs  fea_grid_mesh.rs  fea_inverse.rs  fea_solve.rs  fea_threaded.rs  heightmap_image.rs  island_removal.rs  lattice.rs  mesh_height.rs  model_dims_static.rs  operator_metadata.rs  operator_output_types.rs  raspberry_pi_case.rs  run_cancellation.rs  sample_channels.rs  sdf.rs  slice.rs  step_import.rs  stl_import.rs  strut_model.rs  strut_pattern.rs  subspace.rs  subspace_combinators.rs  subspace_fit.rs
(+248 files in other folders)
