[package]
name = "volumetric"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "boolean_smoke"
path = "src/bin/boolean_smoke.rs"
required-features = ["native"]

[workspace]
members = [
    "crates/models/simple_sphere_model",
    "crates/models/simple_torus_model",
    "crates/models/rounded_box_model",
    "crates/models/gyroid_lattice_model",
    "crates/models/mandelbulb_model",
    "crates/operators/translate_operator",
    "crates/operators/boolean_operator",
    "crates/operators/rotation_operator",
    "crates/operators/scale_operator",
    "crates/operators/lua_script_operator",
    "crates/operators/stl_import_operator",
    "crates/operators/rectangular_prism_operator",
    "crates/operators/heightmap_extrude_operator",
    "crates/volumetric_assets",
    "crates/volumetric_ui",
    "crates/volumetric_cli",
]

[features]
default = ["native"]
# Native WASM backend using wasmtime (desktop)
native = ["dep:wasmtime", "dep:rayon"]
# Web WASM backend using JavaScript bridge (future)
web = ["dep:wasm-bindgen", "dep:js-sys"]
# Enable normal refinement diagnostics (expensive, for benchmarking only)
normal-diagnostic = []
# Enable sharp edge detection diagnostics (expensive, for tuning only)
edge-diagnostic = []

[dependencies]
wasmtime = { version = "27", optional = true }
anyhow = "1"
serde = { version="1.0.228", features = ["derive"] }
serde_cbor = "0.11"
wasmparser = "0.219"
thiserror = "2"
ciborium = "0.2"
log = "0.4"
glam = "0.29"
rayon = { version = "1.10", optional = true }
dashmap = "6"

# Web backend dependencies (future)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Cross-platform time (works on both native and wasm)
web-time = "1"
