[package]
name = "volumetric"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "boolean_smoke"
path = "src/bin/boolean_smoke.rs"
required-features = ["native"]

[workspace]
members = [
    "crates/models/simple_sphere_model",
    "crates/models/simple_torus_model",
    "crates/models/rounded_box_model",
    "crates/models/gyroid_lattice_model",
    "crates/models/mandelbulb_model",
    "crates/models/density_gradient_model",
    "crates/operators/translate_operator",
    "crates/operators/boolean_operator",
    "crates/operators/rotation_operator",
    "crates/operators/scale_operator",
    "crates/operators/lua_script_operator",
    "crates/operators/stl_import_operator",
    "crates/operators/rectangular_prism_operator",
    "crates/operators/heightmap_extrude_operator",
    "crates/operators/extrude_operator",
    "crates/operators/revolve_operator",
    "crates/operators/fea_grid_mesh_operator",
    "crates/operators/fea_solve_operator",
    "crates/operators/fea_density_operator",
    "crates/operators/fea_inverse_operator",
    "crates/operators/mesh_to_model_operator",
    "crates/operators/image_model_operator",
    "crates/operators/mesh_height_operator",
    "crates/volumetric_abi",
    "crates/fea_core",
    "crates/trimesh_model_core",
    "crates/trimesh_model_template",
    "crates/trimesh_height_model_template",
    "crates/gridfield_model_core",
    "crates/gridfield_model_template",
    "crates/volumetric_assets",
    "crates/volumetric_renderer",
    "crates/volumetric_ui",
    "crates/volumetric_ui_v2",
    "crates/volumetric_cli",
    "crates/meshing_lab",
]

[features]
default = ["native"]
# Native WASM backend using wasmtime (desktop)
native = ["dep:wasmtime", "dep:rayon"]
# Web WASM backend using JavaScript bridge (future)
web = ["dep:wasm-bindgen", "dep:js-sys"]
# Enable normal refinement diagnostics (expensive, for benchmarking only)
normal-diagnostic = []

[dependencies]
volumetric_abi = { path = "crates/volumetric_abi" }
wasmtime = { version = "44", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
wasmparser = "0.248"
thiserror = "2"
ciborium = "0.2"
log = "0.4"
glam = "0.32"
rayon = { version = "1", optional = true }
dashmap = "6"

# Web backend dependencies (future)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Cross-platform time (works on both native and wasm)
web-time = "1"

[dev-dependencies]
# Hand-assemble tiny test models in integration tests (already in the tree
# via wasmtime).
wat = "1"
