[package]
name = "volumetric"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "boolean_smoke"
path = "src/bin/boolean_smoke.rs"
required-features = ["native"]

[workspace]
members = [
    "crates/models/simple_sphere_model",
    "crates/models/simple_torus_model",
    "crates/models/rounded_box_model",
    "crates/models/gyroid_lattice_model",
    "crates/models/mandelbulb_model",
    "crates/models/density_gradient_model",
    "crates/operators/translate_operator",
    "crates/operators/boolean_operator",
    "crates/operators/rotation_operator",
    "crates/operators/scale_operator",
    "crates/operators/lua_script_operator",
    "crates/operators/f64_map_merge_operator",
    "crates/operators/stl_import_operator",
    "crates/operators/step_import_operator",
    "crates/operators/rectangular_prism_operator",
    "crates/operators/heightmap_extrude_operator",
    "crates/operators/extrude_operator",
    "crates/operators/revolve_operator",
    "crates/operators/fea_grid_mesh_operator",
    "crates/operators/fea_solve_operator",
    "crates/operators/fea_density_operator",
    "crates/operators/fea_inverse_operator",
    "crates/operators/mesh_to_model_operator",
    "crates/operators/image_model_operator",
    "crates/operators/mesh_height_operator",
    "crates/operators/brim_operator",
    "crates/operators/subspace_operator",
    "crates/operators/subspace_fit_operator",
    "crates/operators/model_bound_operator",
    "crates/operators/slice_operator",
    "crates/operators/span_operator",
    "crates/operators/intersect_operator",
    "crates/volumetric_abi",
    "crates/model_merge_core",
    "crates/lattice_model_core",
    "crates/lattice_model_template",
    "crates/operators/lattice_operator",
    "crates/mesh_edit_core",
    "crates/operators/mesh_clip_operator",
    "crates/operators/mesh_drape_operator",
    "crates/operators/mesh_merge_operator",
    "crates/operators/mesh_transform_operator",
    "crates/operators/point_fill_operator",
    "crates/operators/strut_pattern_operator",
    "crates/operators/voronoi_skeleton_operator",
    "crates/strut_model_core",
    "crates/strut_model_template",
    "crates/operators/strut_model_operator",
    "crates/deform_model_core",
    "crates/deform_model_template",
    "crates/operators/fea_deform_operator",
    "crates/fea_core",
    "crates/brep_core",
    "crates/brep_model_template",
    "crates/trimesh_model_core",
    "crates/trimesh_model_template",
    "crates/trimesh_height_model_template",
    "crates/gridfield_model_core",
    "crates/gridfield_model_template",
    "crates/brim_model_template",
    "crates/voxelmask_model_core",
    "crates/island_model_template",
    "crates/operators/island_removal_operator",
    "crates/ndfield_model_core",
    "crates/sdf_model_template",
    "crates/operators/sdf_operator",
    "crates/operators/offset_operator",
    "crates/operators/sweep_operator",
    "crates/operators/cylinder_operator",
    "crates/coil_model_template",
    "crates/operators/coil_operator",
    "crates/volumetric_assets",
    "crates/volumetric_renderer",
    "crates/volumetric_ui_v2",
    "crates/volumetric_cli",
    "crates/volumetric_protocol",
    "crates/volumetric_daemon",
    "crates/meshing_lab",
    "crates/wasm_dist",
]

[features]
default = ["native"]
# Native WASM backend using wasmtime (desktop)
native = ["dep:wasmtime", "dep:rayon"]
# Web WASM backend using JavaScript bridge (future)
web = ["dep:wasm-bindgen", "dep:js-sys"]
# Enable normal refinement diagnostics (expensive, for benchmarking only)
normal-diagnostic = []

[dependencies]
volumetric_abi = { path = "crates/volumetric_abi" }
wasmtime = { version = "44", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
wasmparser = "0.248"
thiserror = "2"
ciborium = "0.2"
serde_bytes = "0.11"
blake3 = "1"
log = "0.4"
glam = "0.32"
rayon = { version = "1", optional = true }
dashmap = "6"

# Web backend dependencies (future)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Cross-platform time (works on both native and wasm)
web-time = "1"

[dev-dependencies]
# Hand-assemble tiny test models in integration tests (already in the tree
# via wasmtime).
wat = "1"
# examples/profile_fea_inverse.rs replays the inverse solve natively on real
# project inputs to measure the wasm tax and threading headroom. The
# parallel feature is dev-only here; the wasm operator builds (separate
# cargo invocations via the build-wasm alias) never see it.
fea_core = { path = "crates/fea_core", features = ["parallel"] }

[[example]]
name = "profile_fea_inverse"
required-features = ["native"]

# Debug-profile wasmtime compiles wasm ~10x slower than release, and dev
# workflows compile wasm constantly (UI run/scan jobs, module-metadata
# reads — the heavy modules take seconds each at opt-level 0). Optimizing
# just the codegen crates keeps `cargo build` incremental speed while
# making every dev-build wasm compile near release speed; release builds
# are unaffected.
[profile.dev.package.cranelift-codegen]
opt-level = 3
[profile.dev.package.regalloc2]
opt-level = 3

# Upstream atomic-wait has no wasm32 backend, which blocks faer's thread
# pool (spindle) on wasm32-wasip1-threads — the threaded operator builds.
# The vendored copy adds one (wasm futex instructions); native targets
# compile the upstream sources unchanged. See crates/vendored/atomic-wait.
[patch.crates-io]
atomic-wait = { path = "crates/vendored/atomic-wait" }
