[package]
name = "meshing_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
volumetric = { path = "../../" }
glam = "0.32"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "patch_fit_bench"
path = "src/bin/patch_fit_bench.rs"

[[bin]]
name = "segment_bench"
path = "src/bin/segment_bench.rs"
