[package]
name = "volumetric_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
volumetric = { path = "../../" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wgpu = { version = "22.1.0", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "27"
base64 = "0.22"
ciborium = "0.2"
