[package]
name = "volumetric_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
volumetric = { path = "../../" }
volumetric_abi = { path = "../volumetric_abi" }
volumetric_assets = { path = "../volumetric_assets" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "44"
base64 = "0.22"
ciborium = "0.2"
