[package]
name = "volumetric_daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "volumetric_daemon"
path = "src/main.rs"

[features]
default = []
# Serve the trunk-built v2 web UI (crates/volumetric_ui_v2/dist, embedded
# at compile time) from the daemon's own origin. Build the dist first:
#   cd crates/volumetric_ui_v2 && trunk build --release
web-ui = ["dep:include_dir"]

[dependencies]
volumetric = { path = "../.." }
volumetric_protocol = { path = "../volumetric_protocol" }
tiny_http = "0.12"
serde = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
volumetric_protocol = { path = "../volumetric_protocol", features = ["client"] }
# Assemble tiny WAT test models to binary wasm (the model pipeline validates
# bytes with wasmparser, which only accepts the binary format).
wat = "1"
