[package]
name = "volumetric_renderer"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
egui-callback = ["dep:eframe"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"], optional = true }
wgpu = "29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "web_screen_reader"], optional = true }
wgpu = { version = "29", features = ["webgl"] }
