[package]
name = "volumetric_renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "30", features = ["webgl"] }
