[package]
name = "volumetric_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
volumetric = { path = "../../" }
wasmtime = "27"
anyhow = "1"
serde = { version="1.0.228", features = ["derive"] }
wasmparser = "0.219"

# GUI
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }

# GPU point renderer helpers
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"

# Direct wgpu dependency (must match eframe's wgpu version)
wgpu = { version = "27.0.0", default-features = false, features = ["wgsl", "vulkan"] }

# Utilities
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
thiserror = "2"
ciborium = "0.2"
rayon = "1.10"
