[package]
name = "volumetric_ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["volumetric/native", "dep:rayon", "dep:env_logger"]
web = ["volumetric/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:console_log", "dep:console_error_panic_hook", "dep:js-sys"]

[dependencies]
volumetric = { path = "../../", default-features = false }
volumetric_assets = { path = "../volumetric_assets" }
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
wasmparser = "0.219"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
log = "0.4"
thiserror = "2"
ciborium = "0.2"
web-time = "1"

# Optional native dependencies
rayon = { version = "1.10", optional = true }
env_logger = { version = "0.11", optional = true }

# Optional WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Blob", "Url", "HtmlAnchorElement", "HtmlElement", "DomTokenList", "Element"], optional = true }

# Target-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
wgpu = { version = "27.0.0", default-features = false, features = ["wgsl", "vulkan"] }
rfd = "0.15"
poll-promise = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "web_screen_reader"] }
wgpu = { version = "27.0.0", default-features = false, features = ["wgsl", "webgl", "webgpu"] }
rfd = "0.15"
poll-promise = { version = "0.3", features = ["web"] }
