[package]
name = "volumetric_ui_v2"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
damascene-core = "0.4.5"
damascene-wgpu = "0.4.5"
damascene-winit-wgpu = "0.4.5"
anyhow = "1"
glam = "0.32"
pollster = "0.4"
rfd = "0.17"
volumetric = { path = "../../" }
volumetric_assets = { path = "../volumetric_assets" }
volumetric_protocol = { path = "../volumetric_protocol", features = ["client"] }
volumetric_renderer = { path = "../volumetric_renderer" }
wgpu = "29"
winit = "0.30"

[[bin]]
name = "volumetric_ui_v2"
path = "src/main.rs"

[[bin]]
name = "dump_v2_shell"
path = "src/bin/dump_v2_shell.rs"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
# Hand-assemble tiny 2D field models in session tests.
wat = "1"
# In-process daemon for the remote-backend end-to-end tests.
volumetric_daemon = { path = "../volumetric_daemon" }
