[package]
name = "fea_inverse_operator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
volumetric_abi = { path = "../../volumetric_abi" }
fea_core = { path = "../../fea_core" }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"

[features]
# The wasm32-wasip1-threads variant build: unlocks fea_core's thread pool
# and the schwarz preconditioner. Never enabled on wasm32-unknown-unknown.
threaded = ["fea_core/parallel"]
