[package]
name = "heightmap_extrude_operator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
volumetric_abi = { path = "../../volumetric_abi" }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
wasm-encoder = "0.248"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
