[package]
name = "lua_script_operator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
volumetric_abi = { path = "../../volumetric_abi" }
walrus = "0.26"
full_moon = "2.2"
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
thiserror = "2"

[dev-dependencies]
wasmtime = "44"
