[package]
name = "strut_model_operator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
volumetric_abi = { path = "../../volumetric_abi" }
strut_model_core = { path = "../../strut_model_core" }
walrus = "0.26"
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
