[package]
name = "strut_pattern_operator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
volumetric_abi = { path = "../../volumetric_abi" }
lattice_model_core = { path = "../../lattice_model_core" }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
